--- a/mlrhelp/selectFeatures.html
+++ b/mlrhelp/selectFeatures.html
@@ -134,104 +134,104 @@ ctrlExh <- makeFeatSelControlExhaustive(maxit=NA, max.features=NA)
 
 sfSeq <- selectFeatures(lrn, task, rdesc, control=ctrlSeq)
 </div>
-<strong class='message'>[selectFeatures] 1: 0 bits: mmce.test.mean=0,68</strong>
-<strong class='message'>[selectFeatures] 2: 1 bits: mmce.test.mean=0,28</strong>
-<strong class='message'>[selectFeatures] 2: 1 bits: mmce.test.mean=0,58</strong>
-<strong class='message'>[selectFeatures] 2: 1 bits: mmce.test.mean=0,04</strong>
-<strong class='message'>[selectFeatures] 2: 1 bits: mmce.test.mean=0,02</strong>
-<strong class='message'>[selectFeatures] 3: 2 bits: mmce.test.mean=0,02</strong>
-<strong class='message'>[selectFeatures] 3: 2 bits: mmce.test.mean=0,02</strong>
-<strong class='message'>[selectFeatures] 3: 2 bits: mmce.test.mean=0,04</strong>
+<strong class='message'>[selectFeatures] 1: 0 bits: mmce.test.mean=0.68</strong>
+<strong class='message'>[selectFeatures] 2: 1 bits: mmce.test.mean=0.26</strong>
+<strong class='message'>[selectFeatures] 2: 1 bits: mmce.test.mean=0.52</strong>
+<strong class='message'>[selectFeatures] 2: 1 bits: mmce.test.mean=0.06</strong>
+<strong class='message'>[selectFeatures] 2: 1 bits: mmce.test.mean= 0.1</strong>
+<strong class='message'>[selectFeatures] 3: 2 bits: mmce.test.mean=0.06</strong>
+<strong class='message'>[selectFeatures] 3: 2 bits: mmce.test.mean=0.06</strong>
+<strong class='message'>[selectFeatures] 3: 2 bits: mmce.test.mean= 0.1</strong>
 <div class='input'>sfSeq
 </div>
 <div class='output'>FeatSel result:
-Features (1): Petal.Width
-=0,02
+Features (1): Petal.Length
+=0.06
 </div>
 <div class='input'>sfGA <- selectFeatures(lrn, task, rdesc, control=ctrlGA)
 </div>
-<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean= 0,5</strong>
-<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean= 0,3</strong>
-<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0,04</strong>
-<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean= 0,3</strong>
-<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean= 0,3</strong>
-<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean= 0,5</strong>
-<strong class='message'>[selectFeatures] 1: 0 bits: mmce.test.mean=0,68</strong>
-<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean= 0,5</strong>
-<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 2: 1 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 2: 1 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 2: 1 bits: mmce.test.mean= 0,3</strong>
-<strong class='message'>[selectFeatures] 2: 2 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 2: 2 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 3: 1 bits: mmce.test.mean=0,04</strong>
-<strong class='message'>[selectFeatures] 3: 2 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 3: 1 bits: mmce.test.mean= 0,5</strong>
-<strong class='message'>[selectFeatures] 3: 3 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 3: 1 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 4: 1 bits: mmce.test.mean=0,04</strong>
-<strong class='message'>[selectFeatures] 4: 1 bits: mmce.test.mean= 0,5</strong>
-<strong class='message'>[selectFeatures] 4: 1 bits: mmce.test.mean= 0,5</strong>
-<strong class='message'>[selectFeatures] 4: 3 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 4: 3 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 5: 3 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 5: 1 bits: mmce.test.mean= 0,5</strong>
-<strong class='message'>[selectFeatures] 5: 2 bits: mmce.test.mean=0,04</strong>
-<strong class='message'>[selectFeatures] 5: 2 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 5: 2 bits: mmce.test.mean=0,08</strong>
+<strong class='message'>[selectFeatures] 1: 0 bits: mmce.test.mean=0.64</strong>
+<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0.46</strong>
+<strong class='message'>[selectFeatures] 1: 4 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0.02</strong>
+<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean= 0.3</strong>
+<strong class='message'>[selectFeatures] 1: 0 bits: mmce.test.mean= 0.6</strong>
+<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0.46</strong>
+<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 1: 0 bits: mmce.test.mean=0.62</strong>
+<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 2: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 2: 2 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 2: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 2: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 2: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 3: 2 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 3: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 3: 2 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 3: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 3: 2 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 4: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 4: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 4: 2 bits: mmce.test.mean=0.02</strong>
+<strong class='message'>[selectFeatures] 4: 2 bits: mmce.test.mean=0.02</strong>
+<strong class='message'>[selectFeatures] 4: 2 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 5: 2 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 5: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 5: 1 bits: mmce.test.mean=0.02</strong>
+<strong class='message'>[selectFeatures] 5: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 5: 3 bits: mmce.test.mean=0.04</strong>
 <div class='input'>sfGA
 </div>
 <div class='output'>FeatSel result:
-Features (3): Sepal.Length, Sepal.Width, Petal.Width
-=0,04
+Features (1): Petal.Length
+=0.02
 </div>
 <div class='input'>sfRand <- selectFeatures(lrn, task, rdesc, control=ctrlRand)
 </div>
-<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean= 0,1</strong>
-<strong class='message'>[selectFeatures] 1: 0 bits: mmce.test.mean=0,68</strong>
-<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0,36</strong>
-<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0,06</strong>
-<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0,06</strong>
-<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean= 0,1</strong>
-<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean= 0,1</strong>
-<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean= 0,1</strong>
-<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean= 0,1</strong>
-<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0,06</strong>
+<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0.06</strong>
+<strong class='message'>[selectFeatures] 1: 4 bits: mmce.test.mean=0.06</strong>
+<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0.36</strong>
+<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0.06</strong>
+<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0.06</strong>
+<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0.36</strong>
+<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0.36</strong>
+<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0.44</strong>
+<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0.06</strong>
+<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0.02</strong>
 <div class='input'>sfRand
 </div>
 <div class='output'>FeatSel result:
-Features (2): Sepal.Width, Petal.Length
-=0,06
+Features (1): Petal.Length
+=0.02
 </div>
 <div class='input'>sfExh <- selectFeatures(lrn, task, rdesc, control=ctrlExh)
 </div>
-<strong class='message'>[selectFeatures] 1: 0 bits: mmce.test.mean=0,64</strong>
-<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0,32</strong>
-<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0,58</strong>
-<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0,02</strong>
-<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0,32</strong>
-<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0,02</strong>
-<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0,02</strong>
-<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0,02</strong>
-<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0,08</strong>
-<strong class='message'>[selectFeatures] 1: 4 bits: mmce.test.mean=0,08</strong>
+<strong class='message'>[selectFeatures] 1: 0 bits: mmce.test.mean=0.68</strong>
+<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0.34</strong>
+<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0.46</strong>
+<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0.06</strong>
+<strong class='message'>[selectFeatures] 1: 1 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0.28</strong>
+<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0.06</strong>
+<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0.06</strong>
+<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 1: 2 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0.06</strong>
+<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 1: 3 bits: mmce.test.mean=0.04</strong>
+<strong class='message'>[selectFeatures] 1: 4 bits: mmce.test.mean=0.04</strong>
 <div class='input'>sfExh
 </div>
 <div class='output'>FeatSel result:
-Features (2): Sepal.Length, Petal.Width
-=0,02
+Features (1): Petal.Width
+=0.04
 </div></pre>
   </div>
   <div class="span4">
