--- a/mlrhelp/getConfMatrix.html
+++ b/mlrhelp/getConfMatrix.html
@@ -98,19 +98,19 @@ print(getConfMatrix(pred))
 </div>
 <div class='output'>            predicted
 true         setosa versicolor virginica -SUM-
-  setosa         27          0         0     0
-  versicolor      0         23         2     2
-  virginica       0          0        23     0
-  -SUM-           0          0         2     2
+  setosa         23          0         0     0
+  versicolor      0         30         0     0
+  virginica       0          1        21     1
+  -SUM-           0          1         0     1
 </div>
 <div class='input'>print(getConfMatrix(pred, relative = TRUE))
 </div>
 <div class='output'>            predicted
 true         setosa versicolor virginica      -SUM-
-  setosa          1       0.00      0.00 0.00000000
-  versicolor      0       0.92      0.08 0.08000000
-  virginica       0       0.00      1.00 0.00000000
-  -SUM-           0       0.00      1.00 0.02666667
+  setosa          1 0.00000000 0.0000000 0.00000000
+  versicolor      0 1.00000000 0.0000000 0.00000000
+  virginica       0 0.04545455 0.9545455 0.04545455
+  -SUM-           0 1.00000000 0.0000000 0.01333333
 </div></pre>
   </div>
   <div class="span4">
