--- a/mlrhelp/setThreshold.html
+++ b/mlrhelp/setThreshold.html
@@ -89,34 +89,34 @@ mod <- train(lrn, task)
 pred <- predict(mod, newdata = iris)
 performance(pred, measure = mmce)
 </div>
-<div class='output'>[1] 0,02
+<div class='output'>[1] 0.02
 </div>
 <div class='input'>head(as.data.frame(pred))
 </div>
 <div class='output'>   truth prob.setosa prob.versicolor prob.virginica response
-1 setosa           1    3,896358e-22   2,611168e-42   setosa
-2 setosa           1    7,217970e-18   5,042143e-37   setosa
-3 setosa           1    1,463849e-19   4,675932e-39   setosa
-4 setosa           1    1,268536e-16   3,566610e-35   setosa
-5 setosa           1    1,637387e-22   1,082605e-42   setosa
-6 setosa           1    3,883282e-21   4,566540e-40   setosa
+1 setosa           1    3.896358e-22   2.611168e-42   setosa
+2 setosa           1    7.217970e-18   5.042143e-37   setosa
+3 setosa           1    1.463849e-19   4.675932e-39   setosa
+4 setosa           1    1.268536e-16   3.566610e-35   setosa
+5 setosa           1    1.637387e-22   1.082605e-42   setosa
+6 setosa           1    3.883282e-21   4.566540e-40   setosa
 </div>
 <div class='input'>## adjust threshold and predict probabilities again
 threshold <- c(setosa = 0.4, versicolor = 0.3, virginica = 0.3)
 pred <- setThreshold(pred, threshold = threshold)
 performance(pred, measure = mmce)
 </div>
-<div class='output'>[1] 0,02
+<div class='output'>[1] 0.02
 </div>
 <div class='input'>head(as.data.frame(pred))
 </div>
 <div class='output'>   truth prob.setosa prob.versicolor prob.virginica response
-1 setosa           1    3,896358e-22   2,611168e-42   setosa
-2 setosa           1    7,217970e-18   5,042143e-37   setosa
-3 setosa           1    1,463849e-19   4,675932e-39   setosa
-4 setosa           1    1,268536e-16   3,566610e-35   setosa
-5 setosa           1    1,637387e-22   1,082605e-42   setosa
-6 setosa           1    3,883282e-21   4,566540e-40   setosa
+1 setosa           1    3.896358e-22   2.611168e-42   setosa
+2 setosa           1    7.217970e-18   5.042143e-37   setosa
+3 setosa           1    1.463849e-19   4.675932e-39   setosa
+4 setosa           1    1.268536e-16   3.566610e-35   setosa
+5 setosa           1    1.637387e-22   1.082605e-42   setosa
+6 setosa           1    3.883282e-21   4.566540e-40   setosa
 </div></pre>
   </div>
   <div class="span4">
